--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+.app-container {
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-header {
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-title {
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app-main {
 }
 
-.App-link {
-  color: #61dafb;
+.app-section-left {
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-section-left-buttons {
+}
+
+.app-section-right {
+}
+
+.app-section-right-group {
+}
+
+.app-sub-title {
+}
+
+.app-section-right-buttons {
 }
