--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,23 @@
 .app-container {
+  min-height: 100vh;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .app-header {
+  height: min-content;
+  width: 100%;
 }
 
 .app-title {
 }
 
 .app-main {
+  height: min-content;
+  width: 100%;
 }
 
 .app-section-left {
