Updated UI layout

--- a/src/components/atoms/ButtonTwo/ButtonTwo.css
+++ b/src/components/atoms/ButtonTwo/ButtonTwo.css
@@ -1,2 +1,13 @@
 .button-two {
+    border: 1.5px solid #bccce6;
+    border-radius: 25px;
+    margin: 3px;
+    padding: 10px 20px;
+    font-weight: bold;
+    color: #bccce6;
+}
+
+.button-two:hover {
+    background-color: #0c295e;
+    cursor: pointer;
 }
