--- a/src/components/atoms/ButtonOne/ButtonOne.css
+++ b/src/components/atoms/ButtonOne/ButtonOne.css
@@ -1,2 +1,9 @@
-.button-one {
+.button-one-container {
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    margin: 10px;
+    padding: 10px 30px;
+    border: none;
+    outline: none;
 }
