--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @media (max-width: 480px) {}
+
 @media (max-width: 768px) {
   .app-container {
     height: 100vh;
@@ -8,47 +9,43 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .app-header {
     height: min-content;
     width: 100%;
     border: dashed red;
   }
-  
-  .app-title {
-  }
-  
+
+  .app-title {}
+
   .app-main {
     height: min-content;
     width: 100%;
     display: flex;
     flex-direction: row;
   }
-  
+
   .app-section-left {
     height: 500px;
     width: 250px;
     border: dashed red;
   }
-  
-  .app-section-left-buttons {
-  }
-  
+
+  .app-section-left-buttons {}
+
   .app-section-right {
     height: 500px;
     width: 250px;
     border: dashed red;
   }
-  
-  .app-section-right-group {
-  }
-  
-  .app-sub-title {
-  }
-  
-  .app-section-right-buttons {
-  }
+
+  .app-section-right-group {}
+
+  .app-sub-title {}
+
+  .app-section-right-buttons {}
 }
+
 @media (max-width: 1024px) {
   .app-container {
     height: 100vh;
@@ -58,47 +55,43 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .app-header {
     height: min-content;
     width: 100%;
     border: dashed red;
   }
-  
-  .app-title {
-  }
-  
+
+  .app-title {}
+
   .app-main {
     height: min-content;
     width: 100%;
     display: flex;
     flex-direction: row;
   }
-  
+
   .app-section-left {
     height: 500px;
     width: 250px;
     border: dashed red;
   }
-  
-  .app-section-left-buttons {
-  }
-  
+
+  .app-section-left-buttons {}
+
   .app-section-right {
     height: 500px;
     width: 250px;
     border: dashed red;
   }
-  
-  .app-section-right-group {
-  }
-  
-  .app-sub-title {
-  }
-  
-  .app-section-right-buttons {
-  }
+
+  .app-section-right-group {}
+
+  .app-sub-title {}
+
+  .app-section-right-buttons {}
 }
+
 @media (max-width: 1200px) {
   .app-container {
     height: 100vh;
@@ -108,105 +101,109 @@
     justify-content: center;
     align-items: center;
   }
-  
+
   .app-header {
     height: min-content;
     width: 100%;
     border: dashed red;
   }
-  
-  .app-title {
-  }
-  
+
+  .app-title {}
+
   .app-main {
     height: min-content;
     width: 100%;
     display: flex;
     flex-direction: row;
   }
-  
+
   .app-section-left {
     height: 500px;
     width: 250px;
     border: dashed red;
   }
-  
-  .app-section-left-buttons {
-  }
-  
+
+  .app-section-left-buttons {}
+
   .app-section-right {
     height: 500px;
     width: 250px;
     border: dashed red;
   }
-  
-  .app-section-right-group {
-  }
-  
-  .app-sub-title {
-  }
-  
-  .app-section-right-buttons {
-  }  
+
+  .app-section-right-group {}
+
+  .app-sub-title {}
+
+  .app-section-right-buttons {}
 }
+
 @media (min-width: 1201px) {
   .app-container {
     height: 550px;
-    width: 900px;
+    width: 1150px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    border: 1px solid red;
+    padding: 0 50px;
+    background-color: #ebebec;
   }
-  
+
   .app-header {
     height: min-content;
     width: 100%;
-    border: 1px solid red;
   }
-  
-  .app-title {
-  }
-  
+
+  .app-title {}
+
   .app-main {
     height: min-content;
     width: 100%;
     display: flex;
     flex-direction: row;
   }
-  
+
   .app-section-left {
     height: 500px;
     width: 450px;
-    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
   }
-  
+
   .app-section-left-buttons {
-    height: 100px;
-    width: 100%;
+    height: 17.50%;
+    width: 80%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    border: 1px solid red;
   }
-  
+
   .app-section-right {
     height: 500px;
-    width: 450px;
-    border: 1px solid red;
+    width: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
-  
+
   .app-section-right-group {
+    width: 100%;
+    margin-bottom: 30px;
   }
-  
+
   .app-sub-title {
+    font-size: 20px;
+    margin: 7px 0;
   }
-  
+
   .app-section-right-buttons {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-  }  
+  }
 }
