--- a/src/components/molecules/AlpacaImage/AlpacaImage.css
+++ b/src/components/molecules/AlpacaImage/AlpacaImage.css
@@ -1,5 +1,5 @@
 .alpaca-image-container {
-    height: 400px;
-    width: 100%;
-    border: 1px solid red;
+    height: 80%;
+    width: 80%;
+    background-color: #0c295e;
 }
