--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,15 @@
   box-sizing: border-box;
 }
 
-html, body {
-  max-height: 100vh;
+html,
+body {
+  height: 100vh;
   max-width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #ebebec;
+  background-color: #ffffff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
