--- a/src/components/molecules/AlpacaImage/AlpacaImage.css
+++ b/src/components/molecules/AlpacaImage/AlpacaImage.css
@@ -1,5 +1,29 @@
 .alpaca-image-container {
-    height: 80%;
-    width: 80%;
-    background-color: #0c295e;
+  height: 80%;
+  width: 80%;
+  background-color: #0c295e;
+}
+
+.alpaca-image-accessories {
+}
+
+.alpaca-image-backgrounds {
+}
+
+.alpaca-image-ears {
+}
+
+.alpaca-image-eyes {
+}
+
+.alpaca-image-hair {
+}
+
+.alpaca-image-leg {
+}
+
+.alpaca-image-mouth {
+}
+
+.alpaca-image-neck {
 }
