updated business logic for image generation on canvas

--- a/src/App.css
+++ b/src/App.css
@@ -193,7 +193,7 @@
   .app-alpaca-image-container {
     height: 80%;
     width: 80%;
-    background-color: #0c295e;
+    /* background-color: #0c295e; */
   }
 
   .app-section-left-buttons {
