--- a/src/components/atoms/Button/Button.css
+++ b/src/components/atoms/Button/Button.css
@@ -1,10 +1,16 @@
 .primary-button {
+  display: block;
+  height: 40px;
+  width: 150px;
   background-color: white;
   color: black;
   font-weight: bold;
-  padding: 10px 30px;
+  font-size: 16px;
   border: 1.5px solid #ffffff;
   outline: none;
+  text-decoration: none;
+  text-align: center;
+  line-height: 32px;
 }
 
 .primary-button:hover {
